docs(ContentSwitcher): update docs (#6650)
* docs(ContentSwitcher): update docs

* docs(ContentSwitcher): finish up doc updates

--- a/packages/react/src/components/Button/Button.mdx
+++ b/packages/react/src/components/Button/Button.mdx
@@ -10,11 +10,24 @@ import { Add16, Delete16 } from '@carbon/icons-react';
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
 
-## Table of Contents
 
 - [Overview](#overview)
+- [Icon-only Buttons](#icon-only-buttons)
+- [Set of Buttons](#set-of-buttons)
 - [Skeleton state](#skeleton-state)
 - [Component API](#component-api)
+  - [Button `as`](#button-as)
+  - [Button `className`](#button-classname)
+  - [Button `hasIconOnly`](#button-hasicononly)
+  - [Button `href`](#button-href)
+  - [Button `iconDescription`](#button-icondescription)
+  - [Button `kind`](#button-kind)
+  - [Button `renderIcon`](#button-rendericon)
+  - [Button `role`](#button-role)
+  - [Button `size`](#button-size)
+  - [Button `tooltipAlignment`](#button-tooltipalignment)
+  - [Button `tooltipPosition`](#button-tooltipposition)
+  - [ButtonSet `stacked`](#buttonset-stacked)
 - [References](#references)
 - [Feedback](#feedback)
 
@@ -71,7 +84,7 @@ content is being loaded.
 
 ## Component API
 
-<Props sort="asc" />
+<Props />
 
 Additional props passed into `Button` will be forwarded along to the underlying
 button element.
@@ -294,15 +307,13 @@ By passing in `stacked` to the `ButtonSet` component, you can arrange your two
 
 ## References
 
-- [MDN: ARIA button role](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/button_role)
-- [W3: Role attribute](https://www.w3.org/WAI/PF/HTML/wiki/RoleAttribute)
-- [W3: ARIA button role example](https://www.w3.org/TR/2016/WD-wai-aria-practices-1.1-20160317/examples/button/button.html)
+[MDN: ARIA button role](https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA/Roles/button_role)
+
+[W3: Role attribute](https://www.w3.org/WAI/PF/HTML/wiki/RoleAttribute)
+
+[W3: ARIA button role example](https://www.w3.org/TR/2016/WD-wai-aria-practices-1.1-20160317/examples/button/button.html)
 
 ## Feedback
 
 Help us improve these docs by
 [editing this file on GitHub](https://github.com/carbon-design-system/carbon/edit/master/packages/react/src/components/Accordion/Accordion.stories.mdx)
-
-```
-
-```
