--- a/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
+++ b/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
@@ -3,10 +3,13 @@ import { withKnobs, boolean, select, text } from '@storybook/addon-knobs';
 import * as stories from './CodeSnippet-story.js';
 import CodeSnippet from '../CodeSnippet';
 
-<!-- How do I get <Props> to work?
- -->
-
 # CodeSnippet
+
+[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/CodeSnippet)
+&nbsp;|&nbsp;
+[Usage guidelines](https://www.carbondesignsystem.com/components/code-snippet/usage)
+&nbsp;|&nbsp;
+[Accessibility](https://www.carbondesignsystem.com/components/code-snippet/accessibility)
 
 ## Table of Contents
 
@@ -70,9 +73,10 @@ invocations, expressions etc.
 
 ## Component API
 
-<Props sort="asc" />
+<Props />
 
 ## Feedback
 
-Help us improve these docs by
-[editing this file on GitHub](https://github.com/carbon-design-system/carbon/edit/master/packages/react/src/components/CodeSnippet/CodeSnippet.stories.mdx)
+Help us improve this component by providing feedback, asking questions on Slack,
+or updating this file on
+[GitHub](https://github.com/carbon-design-system/carbon/edit/master/packages/react/src/components/CodeSnippet/CodeSnippet.stories.mdx)
