--- a/packages/react/src/components/Grid/Grid.mdx
+++ b/packages/react/src/components/Grid/Grid.mdx
@@ -2,6 +2,10 @@ import { Story, Preview, Props } from '@storybook/addon-docs/blocks';
 
 # Grid
 
+[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/Grid)
+&nbsp;|&nbsp;
+[Usage guidelines](https://www.carbondesignsystem.com/guidelines/2x-grid/overview)
+
 <!-- prettier-ignore-start -->
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
@@ -42,8 +46,8 @@ import { Grid, Row, Column } from 'carbon-components-react';
 ## Overview
 
 Every layout starts with the `Grid` component. You can specify a `Grid` at the
-top-level of your project, or at different depths provided that it can span
-100% width of its container.
+top-level of your project, or at different depths provided that it can span 100%
+width of its container.
 
 Next, you will use a combination of `Row` and `Column`. You can have multiple
 `Row` components in a `Grid`, and multiple `Column` components in a `Row`. Each
@@ -253,6 +257,6 @@ would love for you to get in touch!
 
 ## Feedback
 
-Help us improve these components by providing feedback, reaching out tot he
-team, or updating this file on
+Help us improve this component by providing feedback, asking questions on Slack,
+or updating this file on
 [GitHub](https://github.com/carbon-design-system/carbon/edit/master/packages/react/src/components/Grid/Grid.mdx).
