--- a/packages/react/src/components/ContentSwitcher/ContentSwitcher.mdx
+++ b/packages/react/src/components/ContentSwitcher/ContentSwitcher.mdx
@@ -4,9 +4,16 @@ import Switch from '../Switch';
 
 # Content Switcher
 
+[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/ContentSwitcher)
+&nbsp;|&nbsp;
+[Usage guidelines](https://www.carbondesignsystem.com/components/content-switcher/usage)
+&nbsp;|&nbsp;
+[Accessibility](https://www.carbondesignsystem.com/components/content-switcher/accessibility)
+
+## Table of Contents
+
 <!-- START doctoc generated TOC please keep comment here to allow auto update -->
 <!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
-
 
 - [Overview](#overview)
 - [Component API](#component-api)
