--- a/packages/react/src/components/DataTable/DataTable.mdx
+++ b/packages/react/src/components/DataTable/DataTable.mdx
@@ -2,6 +2,12 @@ import { Story, Props, Source, Preview } from '@storybook/addon-docs/blocks';
 
 # DataTable
 
+[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/DataTable)
+&nbsp;|&nbsp;
+[Usage guidelines](https://www.carbondesignsystem.com/components/data-table/usage)
+&nbsp;|&nbsp;
+[Accessibility](https://www.carbondesignsystem.com/components/data-table/accessibility)
+
 <Preview>
   <Story id="datatable--usage" />
 </Preview>
@@ -346,6 +352,6 @@ These are values that represent the current state of the `DataTable` component.
 
 ## Feedback
 
-Help us improve this component by providing feedback, asking questions, and
-leaving any other comments on
+Help us improve this component by providing feedback, asking questions on Slack,
+or updating this file on
 [GitHub](https://github.com/carbon-design-system/carbon/edit/master/packages/react/src/components/DataTable/DataTable.mdx).
