feat(CodeSnippet): add support for word wrap (#6960)
* feat(CodeSnippet): add support for word wrap

* feat(CodeSnippet): change documentation for consistency

* test(snapshot): update snapshot tests

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
+++ b/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
@@ -55,7 +55,8 @@ name or similar small piece of code from it's surrounding text.
 
 Multiple line code snippets are used for displaying code with more than one
 line. They're shown in a block and useful for showing classes, functions, blocks
-of styles and the like.
+of styles and the like. There is an option to wrap the lines displayed if the lines 
+are longer than the container.
 
 <Preview>
   <Story id="codesnippet--multiline" />
