--- a/packages/react/src/components/Button/Button.mdx
+++ b/packages/react/src/components/Button/Button.mdx
@@ -58,8 +58,8 @@ user interacts with it.
 ## Icon-only Buttons
 
 Icon buttons allow users to take actions, and make choices, with a single tap.
-Icon buttons can take the form of any of the five types (Primary, Secondary,
-Tertiary, Danger and Ghost) but most commonly will be styled as primary or ghost
+Icon buttons can take the form of any of the seven types (Primary, Secondary,
+Tertiary, Danger, Danger tertiary, Danger ghost and Ghost) but most commonly will be styled as primary or ghost
 buttons.
 
 <Preview>
@@ -161,14 +161,15 @@ button is interacted with.
 
 ### Button `kind`
 
-Carbon has five types of buttons, `primary`, `secondary`, `tertiary`, `ghost`,
-and `danger`. If no `kind` is specified, a `primary` button will be rendered.
+Carbon has seven types of buttons, `primary`, `secondary`, `tertiary`, `ghost`,
+`danger`, `danger-tertiary`, and `danger-ghost`. If no `kind` is specified, a `primary` button will be rendered.
 For more information on when to use each variant, check out the
 [design documentation](https://www.carbondesignsystem.com/components/button/usage#overview)
 
 <Button>Primary</Button> <Button kind="secondary">Secondary</Button> <Button kind="tertiary">
   Tertiary{' '}
-</Button> <Button kind="danger">Danger</Button> <Button kind="ghost">
+</Button> <Button kind="danger">Danger</Button> <Button kind="danger-tertiary">Danger Tertiary</Button> 
+<Button kind="danger-ghost">Danger Ghost</Button> <Button kind="ghost">
   Ghost
 </Button>
 
@@ -177,6 +178,8 @@ For more information on when to use each variant, check out the
 <Button kind="secondary">Secondary</Button>
 <Button kind="tertiary">Tertiary</Button>
 <Button kind="danger">Danger</Button>
+<Button kind="danger-tertiary">Danger Tertiary</Button>
+<Button kind="danger-ghost">Danger Ghost</Button>
 <Button kind="ghost">Ghost</Button>
 ```
 
