--- a/packages/react/src/components/Button/Button.mdx
+++ b/packages/react/src/components/Button/Button.mdx
@@ -230,17 +230,21 @@ an element appear as a button control to a screen reader. Check out the
 ### Button `size`
 
 This prop specifies which size the `Button` should be rendered at. Valid values
-are `field`, `small`, and `default`. If no `size` is specified, it renders as
-`default`.
+are `field`, `sm`, `lg`, `xl` and `default`. If no `size` is specified, it
+renders as `default`.
 
-<Button>Submit</Button> <Button size="field">Submit</Button> <Button size="small">
+{' '}
+
+<Button>Submit</Button> <Button size="field">Submit</Button> <Button size="sm">
   Submit
-</Button>
+</Button> <Button size="lg">Submit</Button> <Button size="xl">Submit</Button>
 
 ```jsx
 <Button>Submit</Button>
 <Button size="field">Submit</Button>
-<Button size="small">Submit</Button>
+<Button size="sm">Submit</Button>
+<Button size="lg">Submit</Button>
+<Button size="xl">Submit</Button>
 ```
 
 ### Button `tooltipAlignment`
