docs(tooltip): add additional note for missing tooltip props (#7472)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/Tooltip/Tooltip.mdx
+++ b/packages/react/src/components/Tooltip/Tooltip.mdx
@@ -14,6 +14,11 @@ import { Props } from '@storybook/addon-docs/blocks';
 
 ## Component API
 
+Please note that in addition to the props below, `Tooltip` also has two
+additional props: `triggerText` and `iconDescription`. If the `triggerText` prop
+is _not_ provided, the `iconDescription` prop is required to populate the
+`aria-label` property for a11y reasons.
+
 <Props />
 
 ## Feedback
