docs(react): update docs for a few components (#7856)
* docs(react): update docs for a few components

* docs(Tabs): update tab documentation

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/FormLabel/FormLabel.mdx
+++ b/packages/react/src/components/FormLabel/FormLabel.mdx
@@ -1,10 +1,12 @@
 import { Props, Story, Preview } from '@storybook/addon-docs/blocks';
+import Tooltip from '../Tooltip';
 
-# CopyButton
+# FormLabel
 
-[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/CopyButton)
+[Source code](https://github.com/carbon-design-system/carbon/tree/master/packages/react/src/components/FormLabel)
 &nbsp;|&nbsp;
-[Usage guidelines](https://www.carbondesignsystem.com/patterns/common-actions/#copy)
+[Usage guidelines](https://www.carbondesignsystem.com/components/form/usage)
+[Accessibility](https://www.carbondesignsystem.com/components/form/accessibility)
 
 ## Table of Contents
 
@@ -19,12 +21,8 @@ import { Props, Story, Preview } from '@storybook/addon-docs/blocks';
 
 ## Overview
 
-The copy button should be accompanied by a tooltip. Tooltip feedback text should
-be concise and describe the action taken when the user clicks the copy button.
-By default we display the text “Copied!”.
-
 <Preview>
-  <Story id="copybutton--default" />
+  <Story id="formlabel--default" />
 </Preview>
 
 ## Component API
