docs(mdx): fix preview paths (#7937)
* docs(mdx): fix preview paths

* docs(ComposedModal): fix ComposedModal preview

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/Breadcrumb/Breadcrumb.mdx
+++ b/packages/react/src/components/Breadcrumb/Breadcrumb.mdx
@@ -25,7 +25,7 @@ You can build a breadcrumb using a combination of the `Breadcrumb` and
 responsible for displaying the page links in the hierarchy.
 
 <Preview>
-  <Story id="breadcrumb--breadcrumb" />
+  <Story id="components-breadcrumb--breadcrumb" />
 </Preview>
 
 ## Skeleton state
@@ -35,7 +35,7 @@ breadcrumb. This is useful to display while content in your breadcrumb is being
 fetched from an external resource like an API.
 
 <Preview>
-  <Story id="breadcrumb--skeleton" />
+  <Story id="components-breadcrumb--skeleton" />
 </Preview>
 
 ## Component API
