--- a/packages/react/src/components/RadioButton/RadioButton.mdx
+++ b/packages/react/src/components/RadioButton/RadioButton.mdx
@@ -22,7 +22,7 @@ cases where only one selection from a group is allowed, use the radio button
 component instead of the checkbox.
 
 <Preview>
-  <Story id="radiobutton--default" />
+  <Story id="components-radiobutton--default" />
 </Preview>
 
 ## Component API
