docs(CodeSnippet): fix issue with PropTable (#7982)
Co-authored-by: Taylor Jones <tay1orjones@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
+++ b/packages/react/src/components/CodeSnippet/CodeSnippet.mdx
@@ -74,9 +74,7 @@ invocations, expressions etc.
 
 ## Component API
 
-We are investigating why props for this component are not displaying properly.
-Until then, the props for this component can be viewed
-[here](https://github.com/carbon-design-system/carbon/blob/master/packages/react/src/components/CodeSnippet/CodeSnippet.js#L202-L278)
+<Props />
 
 ## Feedback
 
