feat(DatePicker): add disable, enable flatpickr options (#8315)
* feat(DatePicker): add disable, enable flatpickr options

* chore(snapshot): update snapshots

* feat(DatePicker): update disable, enable if values change

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/react/src/components/DatePicker/DatePicker.mdx
+++ b/packages/react/src/components/DatePicker/DatePicker.mdx
@@ -28,6 +28,7 @@ import DatePickerInput from '../DatePickerInput';
   - [DatePicker `locale`](#datepicker-locale)
   - [DatePicker `maxDate`](#datepicker-maxdate)
   - [DatePicker `minDate`](#datepicker-mindate)
+  - [DatePicker `disable` and `enable`](#datepicker-disable-and-enable)
 - [References](#references)
 - [Feedback](#feedback)
 
@@ -221,6 +222,41 @@ Works similarly to the `maxDate` prop. [See above](#datepicker-maxdate).
     labelText="minDate example"
   />
 </DatePicker>
+
+### DatePicker `disable` and `enable`
+
+This uses the Flatpickr `disable` option which allows a user to disable certain
+dates. The disable takes in a array of date strings, or you can pass in a date
+function to the array that will disable dates that returns true.
+[See the Flatpickr documentation for more info](https://flatpickr.js.org/examples/#disabling-dates).
+
+```
+<DatePicker
+  datePickerType="single"
+  disable={[ (date) => (date.getDay() === 0 || date.getDay() === 6)]}>
+  <DatePickerInput
+    placeholder="dd/mm/yyyy"
+    id="date-picker-8"
+    labelText="minDate example"
+  />
+</DatePicker>
+```
+
+The `enable` option works the same, but will disable all dates that are not
+explicitly added to the array.
+[See the flatpickr documentation for more info](https://flatpickr.js.org/examples/#disabling-all-dates-except-select-few).
+
+```
+<DatePicker
+  datePickerType="single"
+  enable={["2021-04-01", "2021-05-01"]}>
+  <DatePickerInput
+    placeholder="dd/mm/yyyy"
+    id="date-picker-8"
+    labelText="minDate example"
+  />
+</DatePicker>
+```
 
 ### DatePicker `value`
 
