feat(codemod): update support for object properties (#8709)
Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/docs/migration/11.x-carbon-icons-react.md
+++ b/docs/migration/11.x-carbon-icons-react.md
@@ -2,6 +2,21 @@
 
 **Note: everything in this file is a work-in-progress and will be changed.**
 
+<!-- prettier-ignore-start -->
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+
+## Table of Contents
+
+- [`@carbon/icons-react`](#carbonicons-react)
+  - [Overview](#overview)
+    - [Migration](#migration)
+    - [Manual migration](#manual-migration)
+      - [Component definition is missing display name](#component-definition-is-missing-display-name)
+
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+<!-- prettier-ignore-end -->
+
 ## Overview
 
 The `@carbon/icons-react` package has been updated to minimize the number of
@@ -104,3 +119,34 @@ codebase that you will need to update manually:
 - If you use snapshot tests, the structure will change and include a `size`
   prop. Make sure that the `size` prop value matches what your icon name used to
   be. For example, `<Add16 />` should become `<Add size={16} />`
+
+#### Component definition is missing display name
+
+If you use `eslint` you may run into the error message above. This comes from
+the `react/display-rule` rule. It comes as a result of the transform changing
+the following code:
+
+```jsx
+// Input
+const iconTypes = {
+  add: Add32,
+};
+
+// Output
+const iconTypes = {
+  add: (props) => <Add size={32} {...props} />,
+};
+```
+
+The transform will create an inline arrow function expression and as a result it
+does not have a `displayName` like if you created this function using a variable
+or function declaration.
+
+To address this issue, you can manually create the component:
+
+```jsx
+const Add32 = (props) => <Add size={32} {...props} />;
+const iconTypes = {
+  add: Add32,
+};
+```
