feat(data-table): add data-table to sass modules style package (#8844)
* feat(data-table): add data-table to sass modules style package

* fix(datatable): apply review feedback, reorganize feature modules

* fix(datatable): properly namespace feature modules, update/add tests

* fix(datatable): ensure feature modules are included in main bundle

* chore: remove unrelated changes

* chore: remove unrelated change

* chore(datatable): remove unused theme variables

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/docs/migration/11.x-carbon-components.md
+++ b/docs/migration/11.x-carbon-components.md
@@ -63,3 +63,12 @@
 | `$duration--slow-02`       |     |
 | `@function motion`         |     |
 | `@mixin motion`            |     |
+
+### `src/globals/scss/_theme-tokens.scss`
+
+| v10                                 | v11     |
+| :---------------------------------- | :------ |
+| `$data-table-heading-transform`     | Removed |
+| `$data-table-heading-border-bottom` | Removed |
+| `$data-table-row-height`            | Removed |
+| `$data-table-zebra-color`           | Removed |
