Update 11.x-color.md (#9363)
* Update 11.x-color.md

Minor content and formatting updates.

* Update 11.x-color.md

* chore(format):  run yarn format

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/docs/migration/11.x-color.md
+++ b/docs/migration/11.x-color.md
@@ -1,26 +1,21 @@
+# Color
+
+> **Note:** The Carbon v11 release is currently in beta release. Be on the
+> lookout for the public preview release available in the coming months.
+
 ## Color tokens
-
-<InlineNotification>
-
-**Note:** The Carbon v11 release is currently in beta release. Be on the lookout
-for the public preview release available in the coming months.
-
-</InlineNotification>
 
 **Status key:**
 
-**New:** a net new color token to the system in v11. It has no v10 counterpart.
-
-**Updated name:** the v10 name has been updated to in v11 to replace the number
-ending with a usage adjective. It just a name change the role stays the same
-between v10 and v11.
-
-**Split:** V10 token has been split into multiple v11 tokens for more specific
-usage.
-
-**No change:** token name has no change between versions.
-
-**Depreciated:** v10 token was removed in v11
+- **New:** A net new color token to the system in v11. It has no v10
+  counterpart.
+- **Updated name:** From v10 to V11 the number suffix has been replaced with an
+  adjective that reflects it's usage. This is just a name change, the role
+  remains the same between v10 and v11.
+- **Split:** V10 token has been split into multiple v11 tokens for more specific
+  usage.
+- **No change:** Token name has no change between versions.
+- **Depreciated:** v10 token was removed in v11.
 
 | **V10 token name** | **V11 token name**        | **Status**          |
 | ------------------ | ------------------------- | ------------------- |
