--- a/packages/react/src/components/Modal/Modal.mdx
+++ b/packages/react/src/components/Modal/Modal.mdx
@@ -223,7 +223,7 @@ With `<ComposedModal>`, you can control the buttons with the following code.
     <Button
       kind="primary"
       onClick={() => { (Run some action...) setOpen(false); }}>
-      Priamry button
+      Primary button
     </Button>
   </ModalFooter>
 </ComposedModal>
