docs(Plex): add plex, font-face documentation (#9371)
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/docs/migration/11.x-carbon-components.md
+++ b/docs/migration/11.x-carbon-components.md
@@ -70,7 +70,7 @@ below that goes over any API changes for the file.
 | [`scss/globals/grid/_grid.scss`](#scssglobalsgrid_gridscss)                     | Moved to `scss/_grid.scss`                |
 | [`scss/globals/scss/_colors.scss`](#scssglobalsscss_colorsscss)                 | Moved to `scss/_colors.scss`              |
 | [`scss/globals/scss/_css--body.scss`](#scssglobalsscss_css--bodyscss)           | TODO                                      |
-| [`scss/globals/scss/_css--font-face.scss`](#scssglobalsscss_css--font-facescss) | TODO                                      |
+| [`scss/globals/scss/_css--font-face.scss`](#scssglobalsscss_css--font-facescss) | Moved to `scss/_font-face.scss`           |
 | [`scss/globals/scss/_css--helpers.scss`](#scssglobalsscss_css--helpersscss)     | Moved to `scss/utilities/`                |
 | [`scss/globals/scss/_css--reset.scss`](#scssglobalsscss_css--resetscss)         | Moved to `scss/_reset.scss`               |
 | [`scss/globals/scss/_helper-classes.scss`](#scssglobalsscss_helper-classesscss) | Moved to `scss/utilities/`                |
@@ -150,7 +150,13 @@ TODO
 
 ### `scss/globals/scss/_css--font-face.scss`
 
-TODO
+Beginning in V11, the `@ibm/plex` package will be included as a dependency of
+`@carbon/styles`. Because of this, we will no longer be serving the files via
+Google Fonts. You will get the fonts by default by importing from the main
+entrypoint (`@use '@carbon/styles'`), or by referencing the font face file
+directly (`@use '@carbon/styles/scss/font-face'`). If you are already hosting
+the font files, and do not want the font files to be emitted, you can set the
+`$css--font-face` variable to `false`.
 
 ### `scss/globals/scss/_css--helpers.scss`
 
