docs: update language (#9439)
* docs: fix inconsistencies in all files

* docs: fix inconsistencies in all files

* fix(docs): format err

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/packages/carbon-react/src/components/Grid/Grid.mdx
+++ b/packages/carbon-react/src/components/Grid/Grid.mdx
@@ -212,7 +212,7 @@ By default, `Grid` and `Column` will render as a `div`. However, you can use the
 your project.
 
 In the example below, we use the `as` prop on `Column` to change it from a `div`
-to a `section`. Simililarly, we use the `as` prop on `Column` to change it from
+to a `section`. Similarly, we use the `as` prop on `Column` to change it from
 a `div` to an `article`.
 
 ```jsx
